--- a/HouseRentalMVC/Views/House/Index.cshtml
+++ b/HouseRentalMVC/Views/House/Index.cshtml
@@ -1,7 +1,32 @@
-﻿
+﻿@model IEnumerable<House>
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>Houses</h2>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - HouseRentalMVC</title>
+    <link href="~/css/HouseStyle.css" rel="stylesheet" />
+     
+</head>
+<body>
+    <div class="houseimg-container">
+        @foreach (var item in Model)
+        {
+            <div class="house-card">
+
+                <img src="@Html.DisplayFor(m => item.imageUrl)" />
+                <h1>@Html.DisplayFor(m => item.Address)</h1>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary">Details</a>
+            </div>
+
+        }
+    </div>
+</body>
+</html>
+
+
 
